<resources>
    <string name="app_name">Lior Beauty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_homepage_string">Home Page</string>
    <string name="nav_gallery_string">Gallery</string>
    <string name="nav_tools_string">My Account</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_order_new">Make an appointment</string>
    <string name="menu_communicate">Communicate</string>
    <string name="order_please_select_date">Please select date</string>
    <string name="order_btn_select_date">SELECT</string>
    <string name="tools_welcome_text">Welcome %1$2s</string>
    <string name="order_adapter_btn_order">ORDER</string>
    <string name="order_adapter_btn_export">EXPORT</string>
    <string name="order_adapter_your_order">This is your order, you can add it to your calendar!</string>
    <string name="order_adapter_already_taken">We sorry but this window is already taken!</string>
    <string name="order_adapter_order_now">This window is available! order now</string>
    <string name="order_adapter_btn_order_now">ORDER</string>
    <string name="gallery_title_image">Gallery</string>
    <string name="homepage_welcome">WELCOME</string>
    <string name="homepage_enjoy">And be ready to enjoy your new look!</string>
    <string name="btn_text_new_appointment">Order now</string>
    <string name="btn_text_gallery">Gallery</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_order">OK</string>
    <string name="dialog_new_apt_title">Make an appointment!</string>
    <string name="text_enter_name">Enter your name:</string>
    <string name="text_enter_phone">Enter phone number:</string>
    <string name="text_choose_type">Type of treatment:</string>
    <string name="text_edit_enter_name">Full name</string>
    <string name="text_edit_enter_phone">Phone number</string>
    <string name="new_window_added">Appointment added successfully!</string>
    <string name="new_window_failed">Appointment not added, please try again later</string>
    <string name="text_please_choose_type">Please choose type</string>
    <string name="btn_tools_save">SAVE</string>
    <string name="btn_tools_login">Login</string>
    <string name="btn_tools_logout">Logout</string>
    <string name="tools_guest_name">Guest</string>
    <string name="tools_phone_number">Phone Number</string>
    <string name="tools_user_name">User name</string>
    <string name="btn_register">Register NOW!</string>
    <string name="tools_enter_username">User name</string>
    <string name="tools_enter_password">Password</string>
    <string name="tools_password">Password:</string>
    <string name="tools_enter_phone_number">Phone number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_username_exist">User name:</string>
    <string name="password_hint">Your password</string>
    <string name="tools_welcome_guest">Welcome dear guest</string>
    <string name="btn_user_ok">OK</string>
    <string name="copyrights">Design by OMRI DESIGN | create by Ido Hayun</string>
    <string name="text_gallery_title">Gallery</string>
    <string name="text_order_title">Order</string>
    <string name="text_tools_title">My Account</string>
    <string name="error_download_images">Sorry! we have an error</string>
    <string name="refresh_gallery_msg">Refreshing</string>
    <string name="event_desctiption_with_type">Your appointment for Lior beauty about %1$2s</string>
    <string name="event_location">Efrayim Kishon Street 8, Be\'er Ya\'akov</string>
    <string name="user_registered_successfully">You Have Been Successfully Registered!</string>
    <string name="error_permissions">FATAL ERROR!</string>
    <string name="permissions_granted_successfully">Permissions granted successfully!</string>
    <string name="permissions_no_granted">No permissions! Action canceled</string>
    <string name="btn_user_logout">LOGOUT</string>
    <string name="user_logout_failed">Logout failed! please try again later</string>
    <string name="login_user_not_found">User doesn\'t exist!</string>
    <string name="login_password_incorrect">Password wrong!</string>
    <string name="login_error_unknown">Unknown Error!</string>
    <string name="user_connect_successfully">Connected successfully</string>
    <string name="user_logout_success">Logging out successfully</string>
    <string name="error_need_to_fill_all_fields">Error! you need to fill all the fields</string>
    <string name="register_user_already_exist">Sorry! but this phone is already exist!</string>
    <string name="error_entered_invalid_data">Sorry, but you entered invalid data</string>
    <string name="error_phone_is_invalid">Phone number is invalid</string>
    <string name="error_username_is_less">User name is less than 3 characters</string>
    <string name="error_password_is_less">Password less than 8 characters</string>
    <string name="welcome_user_exist_text">Welcome %s%n</string>
    <string name="welcome_user_doesnt_exist">Welcome dear guest!\nregister now and make new appointment faster and easier</string>
    <string name="error_export_to_calendar">Oops.. We have some problem, please contact us</string>
    <string name="change_password_hint">Change password</string>
    <string name="dialog_delete_appointment_title">Deleting appointment</string>
    <string name="dialog_delete_appointment_confirm">Are you sure you want to delete the appointment?</string>
    <string name="dialog_appointment_cancled_successfully">Appointment canceled successfully!</string>
    <string name="error_form_is_not_filled">If you want to change something in your account\nyou must fill something.</string>
    <string name="error_user_is_guest_and_change_user_name">It\'s seems that you are not register,\nplease fill password and username to finish your register</string>
    <string name="error_user_is_guest_and_filled_only_phone">It\'s seems you are still a guest,\nif you want to finish your register you must set password and username</string>
    <string name="error_password_is_less_or_invalid">Password is less than 3 characters or invalid</string>
    <string name="nav_manager_upload">Upload new picture</string>
    <string name="nav_manage_panel">Manager Panel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="manage_gallery_add_new_title">Add new picture to gallery</string>
    <string name="btn_browse">BROWSE</string>
    <string name="btn_back">BACK</string>
    <string name="btn_no">NO</string>
    <string name="btn_yes">YES</string>
    <string name="file_deleted_successfully">Pictures deleted successfully</string>
    <string name="popup_delete_image">Are you sure you want to delete this image from server?</string>
    <string name="text_manage_panel_title">Manager Panel</string>
    <string name="manage_calendar_add_new_window">New window</string>
    <string name="manage_calendar_treatment_types">Treatment Types</string>
    <string name="btn_single_appointment">Single window</string>
    <string name="btn_all_day_appointments">Fill day</string>
    <string name="btn_add_new_window">Add new</string>
    <string name="text_choose_min">MIN</string>
    <string name="text_choose_hour">HOUR</string>
    <string name="btn_choose_date_for_new">Calendar</string>
    <string name="please_choose_date">Please choose date</string>
    <string name="btn_add_new_appointment">Add new window</string>
    <string name="single_appointment_description">Add single window</string>
    <string name="all_day_description">Fill all day</string>
    <string name="string_manage_appointment_types">Manage Treatment Types</string>
    <string name="btn_add">Add</string>
    <string name="edit_text_hint_lang_english">English description</string>
    <string name="edit_text_hint_lang_hebrew">Hebrew description</string>
    <string name="edit_text_price_hint">Price</string>
    <string name="btn_ok">OK</string>
    <string name="hebrew_description_hint">HEBREW DESCRIPTION</string>
    <string name="english_description_hint">ENGLISH DESCRIPTION</string>
    <string name="hint_price">PRICE</string>
    <string name="title_new_treatment_type">Add new treatment type</string>
    <string name="text_price_prefix">PRICE:</string>
    <string name="title_edit_treatment_type">Edit treatment</string>
    <string name="treatment_edited_successfully">Edited successfully</string>
    <string name="warning_delete_treatment_types">Are you sure you want to delete this treatment type?</string>
    <string name="treatment_deleted_successfully">Treatment type deleted successfully</string>
    <string name="treatment_added_successfully">Treatment type added successfully</string>
    <string name="text_lang_hebrew">Hebrew:</string>
    <string name="text_lang_english">English:</string>
    <string name="manager_calendar_choose_type">Choose type of new window</string>
    <string name="appointment_deleted_successfully">Appointment window deleted successfully</string>
    <string name="alert_text_window_delete_forever">Are you sure you want to delete this window forever? if someone already catch this window is recommend to let him know before deleting.</string>
    <string name="window_time_already_passed">This window time is already passed!</string>
    <string name="popup_more_details_title">MORE DETAILS</string>
    <string name="popup_more_details_name">Name of the customer:</string>
    <string name="popup_more_details_date">Date:</string>
    <string name="popup_more_details_phone">Phone number:</string>
    <string name="popup_more_details_type_of_treatment">Type of treatment:</string>
    <string name="popup_more_details_time">TIME:</string>
    <string name="order_adapter_personal_approved_prefix">Approved:</string>
    <string name="string_no">No</string>
    <string name="string_yes">Yes</string>
    <string name="update_user_data_successfully">Update completed successfully!</string>
    <string name="update_user_data_unsuccessfully">Update data failed!</string>
    <string name="manager_panel_new_window">New window</string>
    <string name="manager_panel_treatment_type">Manage treatment types</string>
    <string name="manager_panel_approve_appointments">Manage appointments</string>
    <string name="manage_appointments_title">Manage Appointments</string>
    <string name="btn_confirm">Confirm</string>
    <string name="alert_confirm_appointment_text">Are you sure you want to approve this appointment?</string>
    <string name="appointment_confirm_successfully">Appointment confirm successfully!</string>
    <string name="appointment_confirm_failed">Confirm appointment failed!</string>
    <string name="no_available_window">Sorry, but we don\'t have available windows in this day, Please try another day!</string>
    <string name="phone_already_signed">Phone is already in database, You already signed to our system?</string>
    <string name="error_phone_is_already_exist">Phone is already exist in database</string>
</resources>
