<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:title="@string/nav_homepage_string" />
        <item
            android:id="@+id/nav_order"
            android:title="@string/nav_order_new" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/nav_gallery_string" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/nav_tools_string" />
    </group>

    <group
        android:id="@+id/group_manager"
        android:visible="false">
        <item
            android:id="@+id/nav_manage_calendar"
            android:title="@string/nav_manage_panel" />
    </group>
    <item
        android:title="@string/menu_communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share_app" />
        </menu>
    </item>

</menu>
