<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/homepage_user_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/heebo_light"
                android:text="text"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/btn_new_appointment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="Guest or User..." />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="177dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="176dp"
                android:fontFamily="@font/heebo_light"
                android:text="@string/homepage_welcome"
                android:textSize="52sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_light"
                android:gravity="center"
                android:text="@string/homepage_enjoy"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageView
                android:id="@+id/btn_new_appointment"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:srcCompat="@drawable/button_appointment_en" />

            <ImageView
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/logo_image3"
                app:layout_constraintEnd_toEndOf="@+id/btn_new_appointment"
                app:layout_constraintStart_toStartOf="@+id/btn_new_appointment"
                app:srcCompat="@drawable/button_gallery_empty_en" />

            <TextView
                android:id="@+id/btn_appointment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="#00000000"
                android:fontFamily="@font/heebo_light"
                android:text="@string/btn_text_new_appointment"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_new_appointment"
                app:layout_constraintStart_toStartOf="@+id/btn_new_appointment"
                app:layout_constraintTop_toTopOf="@+id/btn_new_appointment" />

            <TextView
                android:id="@+id/btn_appointment_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="#00000000"
                android:fontFamily="@font/heebo_light"
                android:text="@string/btn_text_gallery"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_gallery"
                app:layout_constraintStart_toStartOf="@+id/btn_gallery"
                app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

            <ImageView
                android:id="@+id/logo_image3"
                android:layout_width="277dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/main_copyrights"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/main_copyrights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/heebo_light"
                android:text="@string/copyrights"
                android:textColor="@color/colorText_Hint_simple"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>